crates/server/tests/grammar/snapshots/r#mod__grammar__alpha040__mismatched_braces.snap
---
source: tests/grammar/alpha040.rs
expression: "compiler.tokenize(r#\"\"{{{\"\"#)"
---
[
    (
        Token(
            "\"",
        ),
        0..1,
    ),
    (
        Token(
            "{",
        ),
        1..2,
    ),
    (
        Token(
            "{",
        ),
        2..3,
    ),
    (
        Token(
            "{",
        ),
        3..4,
    ),
    (
        Token(
            "\"",
        ),
        4..5,
    ),
]
