crates/server/tests/grammar/snapshots/r#mod__grammar__alpha040__numbers.snap
---
source: tests/grammar/alpha040.rs
expression: parse_unwrap(&tokenize(input))
---
[
    (
        Statement(
            (
                Expression(
                    (
                        Number(
                            (
                                2.0,
                                5..6,
                            ),
                        ),
                        5..6,
                    ),
                ),
                5..6,
            ),
        ),
        5..6,
    ),
    (
        Statement(
            (
                Expression(
                    (
                        Number(
                            (
                                2.4,
                                11..14,
                            ),
                        ),
                        11..14,
                    ),
                ),
                11..14,
            ),
        ),
        11..14,
    ),
    (
        Statement(
            (
                Expression(
                    (
                        Number(
                            (
                                0.2,
                                19..21,
                            ),
                        ),
                        19..21,
                    ),
                ),
                19..21,
            ),
        ),
        19..21,
    ),
]
