crates/server/tests/grammar/snapshots/r#mod__grammar__alpha040__single_char.snap
---
source: tests/grammar/alpha040.rs
expression: "compiler.tokenize(\"x\")"
---
[
    (
        Token(
            "x",
        ),
        0..1,
    ),
]
