crates/server/tests/grammar/snapshots/r#mod__grammar__alpha040__string_nested_braces.snap
---
source: tests/grammar/alpha040.rs
expression: "compiler.tokenize(r#\"\"text {if true { \"inner\" } else { \"other\" }} end\"\"#)"
---
[
    (
        Token(
            "\"",
        ),
        0..1,
    ),
    (
        Token(
            "text ",
        ),
        1..6,
    ),
    (
        Token(
            "{",
        ),
        6..7,
    ),
    (
        Token(
            "if",
        ),
        7..9,
    ),
    (
        Token(
            "true",
        ),
        10..14,
    ),
    (
        Token(
            "{",
        ),
        15..16,
    ),
    (
        Token(
            "\"",
        ),
        17..18,
    ),
    (
        Token(
            "inner",
        ),
        18..23,
    ),
    (
        Token(
            "\"",
        ),
        23..24,
    ),
    (
        Token(
            "}",
        ),
        25..26,
    ),
    (
        Token(
            "else",
        ),
        27..31,
    ),
    (
        Token(
            "{",
        ),
        32..33,
    ),
    (
        Token(
            "\"",
        ),
        34..35,
    ),
    (
        Token(
            "other",
        ),
        35..40,
    ),
    (
        Token(
            "\"",
        ),
        40..41,
    ),
    (
        Token(
            "}",
        ),
        42..43,
    ),
    (
        Token(
            "}",
        ),
        43..44,
    ),
    (
        Token(
            " end",
        ),
        44..48,
    ),
    (
        Token(
            "\"",
        ),
        48..49,
    ),
]
